@@ -2,6 +2,8 @@
 beta 3
 ======
 
+- Added FindAllByProperty, FindFirst and FindOne
+
 - Added DeleteAll(type, where) (kudos to G. Richard Bellamy)
 
 - Applied patch from Josh Robb. Added support for hooks on ActiveRecordBase<T>.
